kubernetes/clusters/home/utils/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: utils

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: homeassistant.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-service
                port:
                  number: 8123
